--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a human being who wants to talk with computers.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Colorado Springs, CO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy creating music and designs.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream is to start my own business to help support my creative friends.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Washington, DC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe code literacy is something we will all eventually need to learn, and by studying to become a web developer, I will more effectively be able to translate visions to reality.</p>
     </section>
 
     <footer id="footer">
