corrected the spice.

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <p>I am a human being who wants to talk with computers.</p>
       <h1>Where I'm From</h1>
       <p>Colorado Springs, CO</p>
+      <h1>Where do you live?</h1>
+      <p>Washington, DC</p>
       <h1>What are your favorite hobbies?</h1>
       <p>I enjoy creating music and designs.</p>
       <h1>What's your dream job?</h1>
       <p>My dream is to start my own business to help support my creative friends.</p>
-      <h1>Where do you live?</h1>
-      <p>Washington, DC</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>I believe code literacy is something we will all eventually need to learn, and by studying to become a web developer, I will more effectively be able to translate visions to reality.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/ForestW70">Github</a></li>
         </ul>
     </footer>
 </body>
